<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@drawable/gradient"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/sign_up_tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/parolaSignUp"
        android:textColor="#FFFF"
        android:textSize="16sp"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_tv_username" />

    <TextView
        android:id="@+id/sign_up_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="23dp"
        android:text="@string/usernameSignUp"
        android:textColor="#FFFF"
        android:textSize="16sp"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_name" />

    <TextView
        android:id="@+id/sign_up_tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="22dp"
        android:text="@string/anSignUp"
        android:textColor="#FFFF"
        android:textSize="16sp"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_specialization" />

    <TextView
        android:id="@+id/sign_up_tv_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="23dp"
        android:text="@string/serieSignUp"
        android:textColor="#FFFF"
        android:textSize="16sp"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_tv_year" />

    <TextView
        android:id="@+id/sign_up_tv_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="22dp"
        android:text="@string/grupaSignUp"
        android:textColor="#FFFF"
        android:textSize="16sp"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_tv_series" />

    <TextView
        android:id="@+id/sign_up_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/inregistrareSignUp"
        android:textColor="#FFFF"
        android:textSize="30sp"
        app:fontFamily="@font/galada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_up_btn_sign_up"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="#b93f3f"
        android:text="@string/sign_up"
        android:textColor="#FFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute"
        />

    <EditText
        android:id="@+id/sign_up_et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/parolaSignUpHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_et_username" />

    <EditText
        android:id="@+id/sign_up_et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/usernameSignUpHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

    <EditText
        android:id="@+id/sign_up_et_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/anSignUpHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_specialization" />

    <EditText
        android:id="@+id/sign_up_et_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/serieSignUpHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_et_year"
        android:background="@drawable/rounded_edittext"
        />

    <EditText
        android:id="@+id/sign_up_et_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/grupaSignUpHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_et_series"
        android:background="@drawable/rounded_edittext"
        />

    <TextView
        android:id="@+id/sign_up_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="92dp"
        android:text="@string/first_name"
        android:textColor="#FFFF"
        android:textSize="16sp"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_up_et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/nume_si_prenumeSignUp"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_up_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="23dp"
        android:text="@string/email"
        android:textColor="#FFFF"
        android:textSize="16sp"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_tv_group" />

    <EditText
        android:id="@+id/sign_up_et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_et_group" />

    <TextView
        android:id="@+id/tv_last_name"
        android:text="@string/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:textColor="#FFFF"
        android:textSize="16sp"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_tv_name" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_et_name" />

    <TextView
        android:id="@+id/tv_specialization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="23dp"
        android:textColor="#FFFF"
        android:textSize="16sp"
        android:text="@string/specialization"
        app:fontFamily="@font/didact_gothic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_tv_password" />

    <EditText
        android:id="@+id/et_specialization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/specialization"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_et_password"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"/>

</android.support.constraint.ConstraintLayout>