<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherProfileActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/gradient">
    <ImageView
        android:id="@+id/teacher_activity_image_view_settings"
        android:layout_width="44dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@string/student_profile_image_settings"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/teacher_profile_profile_photo"
        android:layout_width="200dp"
        android:layout_height="131dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/teacher_profile_photo_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_prof" />

    <TextView
        android:id="@+id/teacher_profile_tv_nume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:hint="@string/student_profile_tv_nume_hint"
        android:textColor="@color/backgroundColor"
        android:textSize="30sp"
        app:fontFamily="@font/bangers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teacher_profile_tv_username"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:hint="@string/student_profile_tv_username_hint"
        android:textColor="@color/backgroundColor"
        android:textSize="22sp"
        app:fontFamily="@font/galada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacher_profile_tv_nume" />

    <TextView
        android:id="@+id/teacher_profile_tv_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:hint="@string/student_profile_tv_bio_hint"
        android:text="@string/teacher_profile_tv_bio_original_text"
        android:textColor="@color/lightGray"
        android:textSize="18sp"
        app:fontFamily="@font/averia_libre_italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacher_profile_tv_username" />

    <Button
        android:id="@+id/teacher_profile_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="#b93f3f"
        android:text="@string/student_profile_btn_back"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute"
        android:textSize="14sp"/>
</android.support.constraint.ConstraintLayout>