<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:layout_gravity="center">

    <Button
        android:id="@+id/btn_profesor"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="255dp"
        android:text="@string/btn_profesor_text"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="#b93f3f"
        android:textColor="#FFFFFF"
        tools:ignore="UnusedAttribute"
        android:textSize="14sp"/>

    <Button
        android:textSize="14sp"
        android:id="@+id/btn_student"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_profesor"
        android:layout_alignStart="@+id/btn_profesor"
        android:layout_alignLeft="@+id/btn_profesor"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="#b93f3f"
        android:text="@string/btn_student_text"
        android:textColor="#FFFFFF"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:id="@+id/start_page_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="53dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/start_page_about_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/activity_start_about_image_content_desc"
            app:srcCompat="@android:drawable/ic_dialog_info" />

        <TextView
            android:id="@+id/start_page_tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_page_tv_about_txt"
            android:textColor="@color/backgroundColor"
            android:textSize="23sp"
            app:fontFamily="@font/didact_gothic" />
    </LinearLayout>
>>>>>>> master
</RelativeLayout>